# search_pipeline_builder

./: .gitignore  Makefile  README.md  gen_embeddings.py  get_content.py  get_issue_list.py  get_issues.py  init_db.py  load.py  load_issues.py  parse_issue.py  parse_issue_list.py  pyproject.toml  requirements.txt  rewrite.py  schema.sql  search.py
data/: .gitignore  schema.sql
lib/: base_searchers.py  common.py  defaults.py  fusion.py  search_methods.py
load/: Makefile  get_issues.py  load_catalog.py  load_issues.py  pyproject.toml
scripts/: build_tantivy_index.py  gen_embeddings.py  init_db.py  load.py
search_pipeline/: __init__.py  base_searchers.py  common.py  defaults.py  fusion_method.py  rerankers.py
